# zeroed

./: .gitignore  Cargo.toml
config/: zeroed.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CAPABILITIES.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  SECURITY.md  TODO_MONITORING_SERVICE.md  TUNING.md
scripts/: zeroed.service
src/: main.rs
src/api/: handler.rs  mod.rs  socket.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/daemon/: lifecycle.rs  mod.rs  signals.rs
src/deploy/: mod.rs
src/deploy/app/: history.rs  mod.rs
src/deploy/nginx/: mod.rs
src/deploy/pipeline/: mod.rs
src/deploy/ports/: mod.rs
src/deploy/ssh/: mod.rs
src/deploy/ssl/: mod.rs
src/deploy/systemd/: mod.rs
src/detection/: analyzer.rs  mod.rs  rate_limiter.rs  rules.rs  threshold.rs
src/firewall/: mod.rs
src/geo/: mod.rs
src/network/: capture.rs  connection.rs  interface.rs  mod.rs  packet.rs  parser.rs
src/storage/: archive.rs  binary.rs  bloom.rs  index.rs  mmap.rs  mmap_ring.rs  mod.rs  ring.rs  ring_buffer.rs  shard.rs  wal.rs
