[package]
name = "zeroed"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Kinuthia"]
description = "A high-performance Linux daemon for DoS/DDoS attack protection"
license = "MIT"
repository = "https://github.com/security/zeroed"
keywords = ["security", "ddos", "firewall", "daemon", "networking"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# Network packet capture
pnet = "0.34"
pcap = "1.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Daemon management
daemonize = "0.5"
nix = { version = "0.27", features = ["signal", "user", "fs"] }

# GeoIP lookup
maxminddb = "0.24"

# IP address and network utilities
ipnetwork = "0.20"
cidr-utils = "0.6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Memory-mapped files for efficient storage
memmap2 = "0.9"

# Hash maps and data structures
dashmap = "5.5"  # Concurrent hashmap
parking_lot = "0.12"  # Faster mutexes

# Binary serialization for custom storage format
bincode = "1.3"
byteorder = "1.5"

# CRC32 checksums for data integrity
crc32fast = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# System utilities
libc = "0.2"
sysinfo = "0.30"
num_cpus = "1.16"

# Rate limiting algorithms
governor = "0.6"

# Bloom filters for efficient lookups
bloomfilter = "1.0"

# iptables/nftables integration
iptables = "0.5"

# Unix socket for control interface
tokio-unix-ipc = "0.2"

# Netlink for kernel communication
netlink-packet-core = "0.7"
netlink-sys = "0.8"

# Metrics and statistics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
tempfile = "3.9"
criterion = "0.5"
mockall = "0.12"

[[bin]]
name = "zeroed"
path = "src/main.rs"

[[bin]]
name = "zeroctl"
path = "src/bin/zeroctl.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["geoip", "prometheus"]
geoip = []
prometheus = []
ebpf = []  # Future: eBPF support for kernel-level filtering
